Add custom single-user container and appropriate config changes

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -63,6 +63,9 @@ volumes:
   db:
     external:
       name: ${DB_VOLUME_HOST}
+  shared:
+    external:
+      name: jupyterhub-shared
 
 networks:
   default:
